Fix bugs related to dates and side scroll on mobile, start local storage

--- a/src/style.css
+++ b/src/style.css
@@ -557,6 +557,7 @@ dialog[open] {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    gap: 16px;
     border-radius: 8px;
     padding: 12px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.25);
@@ -685,7 +686,6 @@ dialog legend {
     grid-template-columns: 100%;
     grid-template-rows: 2.3rem;
     gap: 16px;
-    width: 95vw;
 }
 
 #task-modal h3 {
@@ -785,13 +785,17 @@ dialog legend {
     }
 
     .task-list {
-        padding: 0 30px;
+        padding: 0 8px;
     }
 
     .task,
     .project {
         width: 250px;
         justify-self: center;
+    }
+
+    .task {
+        flex: 0 1 250px;
     }
 
     #task-notes {
